Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignBooleanUndefined.quorum
class Main
    action Main
        boolean bool
        bool = cast(boolean, undefined)
    end
end